import Person from "./Person";

export default class Agent extends Person {
}
